--- a/RFM_Online_SomeCountry.ini
+++ b/RFM_Online_SomeCountry.ini
@@ -29,6 +29,7 @@ ruleset=🤖 OpenAi,https://raw.githubusercontent.com/cmliu/ACL4SSR/main/Clash/C
 ruleset=🤖 OpenAi,https://raw.githubusercontent.com/cmliu/ACL4SSR/main/Clash/GithubCopilot.list
 ruleset=🤖 OpenAi,https://raw.githubusercontent.com/cmliu/ACL4SSR/main/Clash/Claude.list
 ruleset=🤖 OpenAi,https://raw.githubusercontent.com/bendusy/RulesForMe/main/aioai.list
+ruleset=🤖 OpenAi,https://raw.githubusercontent.com/SIJULY/Rules/main/Surge/talkatone.list
 ruleset=📹 油管视频,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
 ruleset=🎥 迪士尼+,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/DisneyPlus.list
 ruleset=🎥 IPTV,https://raw.githubusercontent.com/bendusy/RulesForMe/main/iptv.list
