--- a/RFM_Online_SomeCountry.ini
+++ b/RFM_Online_SomeCountry.ini
@@ -13,6 +13,7 @@
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/cmliu/ACL4SSR/refs/heads/main/Clash/CFnat.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/bendusy/RulesForMe/main/argotunnel.list
 ruleset=🛑 全球拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
 ruleset=🍃 应用净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
 ruleset=🍃 应用净化,https://raw.githubusercontent.com/cmliu/ACL4SSR/main/Clash/adobe.list
@@ -21,7 +22,6 @@ ruleset=📢 谷歌FCM,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/SteamCN.list
 ruleset=⚡ Cloudflare,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Cloudflare/Cloudflare.list
-ruleset=⚡ argotunnel,https://raw.githubusercontent.com/bendusy/RulesForMe/main/argotunnel.list
 ruleset=Ⓜ️ 微软服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
 ruleset=🍎 苹果服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
 ruleset=📲 电报信息,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
@@ -50,7 +50,6 @@ custom_proxy_group=☑️ 手动切换`select`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=📢 微信服务`select`[]DIRECT
 custom_proxy_group=⚡ Cloudflare`select`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]♻️ 自动选择`[]☑️ 手动切换`[]DIRECT
-custom_proxy_group=⚡ argotunnel`select`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]♻️ 自动选择`[]☑️ 手动切换`[]DIRECT
 custom_proxy_group=📹 油管视频`select`[]🚀 节点选择`[]🇸🇬 新加坡节点`[]♻️ 自动选择`[]☑️ 手动切换`[]DIRECT
 custom_proxy_group=🎥 迪士尼+`select`[]🚀 节点选择`[]🇸🇬 新加坡节点`[]♻️ 自动选择`[]☑️ 手动切换`[]DIRECT`(Disney|迪士尼|解锁|Media)
 custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]♻️ 自动选择`[]🎯 全球直连`.*
