--- a/RFM_Online_SomeCountry.ini
+++ b/RFM_Online_SomeCountry.ini
@@ -52,24 +52,24 @@ custom_proxy_group=☑️ 手动切换`select`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=📢 微信服务`select`[]DIRECT
 custom_proxy_group=⚡ Cloudflare`select`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]♻️ 自动选择`[]☑️ 手动切换`[]DIRECT
-custom_proxy_group=📹 油管视频`select`[]🚀 节点选择`[]🇸🇬 新加坡节点`[]♻️ 自动选择`[]☑️ 手动切换`[]DIRECT
+custom_proxy_group=📹 油管视频`select`[]🚀 节点选择`[]🇸🇬 新加坡节点`[]♻️ 自动选择`[]☑️ 手动切换`[]DIRECT`(Disney|迪士尼|解锁|Media)
 custom_proxy_group=🎥 迪士尼+`select`[]🚀 节点选择`[]🇸🇬 新加坡节点`[]♻️ 自动选择`[]☑️ 手动切换`[]DIRECT`(Disney|迪士尼|解锁|Media)
 custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]♻️ 自动选择`[]🎯 全球直连`.*
 custom_proxy_group=🎥 IPTV`select`[]DIRECT`[]🇭🇰 香港节点`[]🚀 节点选择`[]♻️ 自动选择`[]☑️ 手动切换
 custom_proxy_group=📲 电报信息`select`[]🚀 节点选择`[]🎯 全球直连`.*
 custom_proxy_group=🤖 OpenAi`select`[]🇺🇲 美国节点`[]🇸🇬 新加坡节点`[]🚀 节点选择`[]♻️ 自动选择`[]☑️ 手动切换`[]DIRECT
-custom_proxy_group=📝 Notion`select`[]🇺🇲 美国节点`[]🇸🇬 新加坡节点`[]🚀 节点选择`[]♻️ 自动选择`[]☑️ 手动切换`[]DIRECT
-custom_proxy_group=Ⓜ️ 微软服务`select`[]🎯 全球直连`[]🚀 节点选择`.*
-custom_proxy_group=🍎 苹果服务`select`[]🇺🇲 美国节点`[]🇸🇬 新加坡节点`[]🚀 节点选择`[]🎯 全球直连`.*
-custom_proxy_group=📢 谷歌FCM`select`[]🇺🇲 美国节点`[]🇸🇬 新加坡节点`[]🚀 节点选择`[]🎯 全球直连`.*
+custom_proxy_group=📝 Notion`select`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🚀 节点选择`[]♻️ 自动选择`[]☑️ 手动切换`[]DIRECT
+custom_proxy_group=Ⓜ️ 微软服务`select`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🚀 节点选择`[]♻️ 自动选择`[]☑️ 手动切换`[]DIRECT
+custom_proxy_group=🍎 苹果服务`select`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🚀 节点选择`[]♻️ 自动选择`[]☑️ 手动切换`[]DIRECT
+custom_proxy_group=📢 谷歌FCM`select`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🚀 节点选择`[]♻️ 自动选择`[]☑️ 手动切换`[]DIRECT
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`.*
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
 custom_proxy_group=🛑 全球拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`.*
-custom_proxy_group=🇭🇰 香港节点`load-balance`(港|HK|hk|Hong Kong|HongKong|hongkong|HKG)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇺🇲 美国节点`load-balance`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States|ATL|BUF|DFW|EWR|IAD|LAX|MCI|MIA|ORD|PHX|PDX|SEA|SJC)`http://www.gstatic.com/generate_204`300,,150
-custom_proxy_group=🇸🇬 新加坡节点`load-balance`(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇭🇰 香港节点`load-balance`(港|HK|hk|Hong Kong|HongKong|hongkong|HKG)`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇺🇲 美国节点`load-balance`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States|ATL|BUF|DFW|EWR|IAD|LAX|MCI|MIA|ORD|PHX|PDX|SEA|SJC)`http://cp.cloudflare.com/generate_204`300,,150
+custom_proxy_group=🇸🇬 新加坡节点`load-balance`(新加坡|坡|狮城|SG|Singapore)`http://cp.cloudflare.com/generate_204`300,,50
 
 enable_rule_generator=true
 overwrite_original_rules=true
