--- a/RFM_Online_SomeCountry.ini
+++ b/RFM_Online_SomeCountry.ini
@@ -49,7 +49,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇺🇲 美国节点`[]🇸🇬 新加坡节点`[]☑️ 手动切换`[]DIRECT
 custom_proxy_group=☑️ 手动切换`select`.*
-custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=♻️ 自动选择`url-test`.*`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=📢 微信服务`select`[]DIRECT
 custom_proxy_group=⚡ Cloudflare`select`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]♻️ 自动选择`[]☑️ 手动切换`[]DIRECT
 custom_proxy_group=📹 油管视频`select`[]🚀 节点选择`[]🇸🇬 新加坡节点`[]♻️ 自动选择`[]☑️ 手动切换`[]DIRECT`(Disney|迪士尼|解锁|Media)
