在 base.yaml 中添加 qichiyu.com 和 x.ai 的域名规则，以增强代理配置的灵活性和功能性。

--- a/base.yaml
+++ b/base.yaml
@@ -2295,6 +2295,7 @@ rule-providers:
     format: text
     type: http
 rules:
+  - DOMAIN-SUFFIX,qichiyu.com,Proxy
   # 本地网络和直连规则
   - RULE-SET,CFnat,DIRECT
   - RULE-SET,LocalAreaNetwork,DIRECT
